--- a/public/css/app.css
+++ b/public/css/app.css
@@ -803,6 +803,9 @@ select {
 .mt-6 {
   margin-top: 1.5rem;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .block {
   display: block;
 }
@@ -883,6 +886,9 @@ select {
 }
 .w-8 {
   width: 2rem;
+}
+.w-1\/4 {
+  width: 25%;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1083,6 +1089,14 @@ select {
 .bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
