--- a/public/css/app.css
+++ b/public/css/app.css
@@ -932,27 +932,6 @@ select {
 .w-10 {
   width: 2.5rem;
 }
-.w-2\/3 {
-  width: 66.666667%;
-}
-.w-4\/5 {
-  width: 80%;
-}
-.w-3\/5 {
-  width: 60%;
-}
-.w-1\/3 {
-  width: 33.333333%;
-}
-.w-5\/12 {
-  width: 41.666667%;
-}
-.w-5\/6 {
-  width: 83.333333%;
-}
-.w-11\/12 {
-  width: 91.666667%;
-}
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -1305,9 +1284,6 @@ select {
 .pt-6 {
   padding-top: 1.5rem;
 }
-.pl-0 {
-  padding-left: 0px;
-}
 .text-left {
   text-align: left;
 }
@@ -1413,6 +1389,10 @@ select {
 .text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .text-indigo-700 {
   --tw-text-opacity: 1;
@@ -1777,20 +1757,12 @@ select {
     margin-left: 1.5rem;
   }
 
-  .sm\:ml-0 {
-    margin-left: 0px;
-  }
-
-  .sm\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .sm\:mt-8 {
-    margin-top: 2rem;
-  }
-
   .sm\:mt-10 {
     margin-top: 2.5rem;
+  }
+
+  .sm\:ml-0 {
+    margin-left: 0px;
   }
 
   .sm\:block {
@@ -1811,14 +1783,6 @@ select {
 
   .sm\:w-1\/5 {
     width: 20%;
-  }
-
-  .sm\:w-3\/5 {
-    width: 60%;
-  }
-
-  .sm\:w-5\/12 {
-    width: 41.666667%;
   }
 
   .sm\:max-w-md {
