templateタグを使ってformを追加するように変更

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1575,6 +1575,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
 .hover\:text-base:hover {
   font-size: 1rem;
   line-height: 1.5rem;
