--- a/public/css/student/test/edit.css
+++ b/public/css/student/test/edit.css
@@ -2,6 +2,14 @@ a.removeFormButton.hidden {
     display: none;
 }
 
+button#unableAddForm.hidden {
+    display:none;
+}
+button#addForm.hidden {
+    display:none;
+}
+
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
