ボタンの位置調整

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1882,6 +1882,11 @@ select {
   .sm\:text-right {
     text-align: right;
   }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 @media (min-width: 768px) {
 
