日付登録機能

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -766,6 +766,10 @@ select {
   margin-top: auto;
   margin-bottom: auto;
 }
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -948,6 +952,9 @@ select {
 }
 .w-10 {
   width: 2.5rem;
+}
+.w-5\/12 {
+  width: 41.666667%;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1324,6 +1331,9 @@ select {
 }
 .text-right {
   text-align: right;
+}
+.align-middle {
+  vertical-align: middle;
 }
 .align-text-bottom {
   vertical-align: text-bottom;
